<resources>
    <string name="app_name">CurrencyConversion</string>
    <string name="amount">Amount</string>
    <string name="buying_rate">buying rate</string>
    <string name="selling_rate">selling rate</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="convert">Convert</string>
    <string name="error">Error</string>
    <string name="ok">OK</string>
    <string name="insert_amount_here">Insert amount here</string>
    <string name="max_char_length_is">Max character length is </string>
    <string name="amountText">%s %s = …</string>
    <string name="resultText">= %s %s</string>
    <string name="smth_went_wrong">Smth went wrong</string>


    <string-array name="currencies">
        <item>AUD</item>
        <item>CAD</item>
        <item>CZK</item>
        <item>DKK</item>
        <item>HRK</item>
        <item>HUF</item>
        <item>JPY</item>
        <item>NOK</item>
        <item>SEK</item>
        <item>CHF</item>
        <item>GBP</item>
        <item>USD</item>
        <item>BAM</item>
        <item>EUR</item>
        <item>PLN</item>
    </string-array>

</resources>