<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_amount_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/amount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_currency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberSigned|numberDecimal"
        app:layout_constraintStart_toStartOf="@id/tv_amount_label"
        app:layout_constraintTop_toBottomOf="@+id/tv_amount_label" />

    <RadioGroup
        android:id="@+id/rg_rates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/rbtn_buying_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buying_rate"
            android:checked="true"
            />

        <RadioButton
            android:id="@+id/rbtn_selling_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selling_rate" />
    </RadioGroup>

    <TextView
        android:id="@+id/tv_from_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/from"
        app:layout_constraintEnd_toStartOf="@+id/tv_to_label"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rg_rates" />

    <Spinner
        android:id="@+id/sp_from_currency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/tv_from_label"
        app:layout_constraintTop_toBottomOf="@+id/tv_from_label" />

    <TextView
        android:id="@+id/tv_to_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/to"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_from_label"
        app:layout_constraintTop_toBottomOf="@+id/rg_rates" />

    <Spinner
        android:id="@+id/sp_to_currency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/tv_to_label"
        app:layout_constraintTop_toBottomOf="@+id/tv_to_label" />

    <Button
        android:id="@+id/btn_convert_currency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/convert"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sp_from_currency" />

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_convert_currency" />


</androidx.constraintlayout.widget.ConstraintLayout>